--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 
 <head>
+  <meta charset="utf-8">
   <title>Hello World</title>
+  <meta name="author" content="Daniel Łyczko">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body></body>
